--- a/style.css
+++ b/style.css
@@ -1,43 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,700&display=swap');
 
-*{
-    border: 1px solid;
-}
+    /* *{
+        border: 1px solid;
+    } */
 
 body{
-    margin: 0;
+    margin: 0 auto;
+    width: 75vw;
+    height: 100vh;
     font-family: 'Roboto', sans-serif;
+    background-color: black;
+}
+
+/* HEADER */
+
+.header, .info-section, .call-section{
+    padding: 5px 210px 90px;
+    /* width: 75vw; */
 }
 
 .nav-links{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 75px;
 }
 
+.logo {
+    font-size: 24px;
+    font-weight: 800;
+    color: #F9FAF8;
+    flex: 2 1 auto;
+}
+
 ul {
-    margin: 0;
     padding: 0;
+    display: flex;
+    flex: 1 1 1;
 }   
 
 ul li {
     list-style-type: none;
-    margin: 0 21px 0 0px;
+    margin: 0 0 0 16px;
     padding: 0;
-    display: inline;
+    
 }
 
 a {
     text-decoration: none;
 }
 
-.header{
-    padding: 20px 0 100px 0;
-}
-
 .header, .footer{
     background-color: #1F2937;
+}
+
+
+/* HEADER - INTRO/HERO */
+
+.intro {
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+    flex-wrap: wrap;
+}
+
+.hero-section {
+    margin-right: 20px;
+    flex: 1 1 0;
+}
+
+.intro-image{
+    max-width: 450px;
+    height: auto;
+    flex: 2 1 auto;
+    box-shadow: 1px 1px 15px rgba(255,255,255, .2);
 }
 
 .hero-header{
@@ -47,35 +83,102 @@ a {
     margin: 0;
 }
 
+.hero-subheader{
+    margin-top: 10px;
+}
+
 .hero-subheader, .nav a, .signup{
     font-size: 18px;
     color: #E5E7EB;
 }
 
-.logo {
-    font-size: 24px;
-    font-weight: 800;
-    color: #F9FAF8;
+figcaption {
+    font-size: 14px;
+    color: #E5E7EB;
 }
+
+.signup {
+    padding: 9px 30px;
+    border: 0;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
+
 
 button{
     background-color: #3882F6;
     font-weight: 800;
 }
 
+/* CONTENT-INFO */
+
+.info-section, .call-section{
+    background-color: #F9FAF8;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.info-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .info-heading{
     font-size: 36px;
-    font-weight: bolder;
+    font-weight: 900;
     color: #1F2937;
+    margin: 0;
+    text-align: center;
 }
+
+.image-list {
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.img-main {
+    width: 150px;
+    height: auto;    
+}
+
+.img-main img {
+    width: inherit;
+    border:4px solid #3882F6;
+    border-radius: 14px;
+}
+
+.img-main figcaption {
+    color:#1F2937;
+    text-align: center;
+}
+
+/* QUOTE */
 
 .quote-section {
     background-color: #E5E7EB;
+    padding: 0 150px 0 150px;
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
 }
 
 .quote-text{
     font-size: 36px;
-    font-weight: lighter;
+    font-weight: 500;
     font-style: italic;
     color:#1F2937;
+    margin: 0;
 }
+
+.author {
+    text-align: right;
+    font-size: 20px;
+    font-weight: 900;
+}
+
+/* FOOTER */
