--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
         border: 1px solid;
     } */
 
+
 body{
     margin: 0 auto;
     width: 75vw;
@@ -72,10 +73,13 @@ a {
 .intro-image{
     max-width: 450px;
     height: auto;
-    flex: 2 1 auto;
+    flex: 1 1 auto;
     box-shadow: 1px 1px 15px rgba(255,255,255, .2);
 }
 
+figure {
+    margin: 0;
+}
 .hero-header{
     font-size: 48px;
     font-weight: 900;
@@ -102,26 +106,20 @@ figcaption {
     border: 0;
     border-radius: 8px;
     margin-bottom: 15px;
-}
-
-
-button{
+    color: #F9FAF8;
     background-color: #3882F6;
     font-weight: 800;
 }
 
-/* CONTENT-INFO */
+
+
+
+/* INFO */
 
 .info-section, .call-section{
     background-color: #F9FAF8;
     padding-top: 50px;
     padding-bottom: 50px;
-}
-
-.info-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .info-heading{
@@ -133,16 +131,16 @@ button{
 }
 
 .image-list {
-    width: 100%;
     margin-top: 50px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
 .img-main {
-    width: 150px;
-    height: auto;    
+    width: 170px;
+    height: auto;  
+    margin: 16px 0; 
 }
 
 .img-main img {
@@ -151,20 +149,28 @@ button{
     border-radius: 14px;
 }
 
-.img-main figcaption {
+.info{
     color:#1F2937;
     text-align: center;
 }
+
+.attribution{
+    font-size: 12px;
+    font-weight: 100;
+    text-align: center;
+}
+
 
 /* QUOTE */
 
 .quote-section {
     background-color: #E5E7EB;
-    padding: 0 150px 0 150px;
-    min-height: 400px;
+    padding: 0 210px 0 210px;
+    min-height: 425px;
     display: flex;
     flex-direction: column;
     justify-content:center;
+    align-items: right;
 }
 
 .quote-text{
@@ -172,6 +178,7 @@ button{
     font-weight: 500;
     font-style: italic;
     color:#1F2937;
+    display: flex;
     margin: 0;
 }
 
@@ -179,6 +186,42 @@ button{
     text-align: right;
     font-size: 20px;
     font-weight: 900;
+    margin-right: 35px;
+}
+
+/* CALL TO ACTION */
+
+.call-to-action {
+    background-color: #3882F6;
+    color:#F9FAF8;
+    padding: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    border-radius: 8px;
+}
+
+.call-section p, .call-section h3 {
+    margin: 0;
+}
+
+.call-section h3 {
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+.call-section p {
+    font-size: 16px;
+}
+
+.call-signup {
+    margin-top: 16px;
+    border: 2px solid #F9FAF8;
 }
 
 /* FOOTER */
+.footer {
+    color:#F9FAF8;
+    padding: 20px 0;
+    text-align: center;
+}
